[package]
name = "rcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.8"
clap = { version = "4.5.2", optional = true, features = ["derive", "env"] }

[features]
cli = ["dep:clap"]

[[bin]]
name = "rcon"
required-features = ["cli"]

[profile.release]
strip = true
lto = true
codegen-units = 1
